from datetime import datetime
from enum import Enum
from sqlalchemy import String, Integer, Float, DateTime, ForeignKey, Boolean, Enum as SQLEnum, JSON
from sqlalchemy.orm import Mapped, mapped_column, relationship
from app.core.database import Base


class Role(str, Enum):
    CUSTOMER = "customer"
    MANAGER = "encargado"
    ADMIN = "admin"


class OrderStatus(str, Enum):
    PENDING = "pendiente"
    CONFIRMED = "confirmado"
    IN_PREPARATION = "en_preparacion"
    READY = "listo"
    DELIVERED = "entregado"
    CANCELED = "cancelado"


class PaymentStatus(str, Enum):
    PENDING = "pendiente"
    PAID = "pagado"
    REJECTED = "rechazado"
    REFUNDED = "reembolsado"
class User(Base):
    __tablename__ = "users"
    id: Mapped[int] = mapped_column(primary_key=True)
    rut: Mapped[str] = mapped_column(String(12), unique=True, index=True)
    email: Mapped[str] = mapped_column(String(120), unique=True, index=True)
    password_hash: Mapped[str] = mapped_column(String(255))
    name: Mapped[str] = mapped_column(String(100))
    role: Mapped[Role] = mapped_column(SQLEnum(Role), default=Role.CUSTOMER)
    is_active: Mapped[bool] = mapped_column(Boolean, default=True)
    is_banned: Mapped[bool] = mapped_column(Boolean, default=False)
    created_at: Mapped[datetime] = mapped_column(DateTime, default=datetime.utcnow)

    orders: Mapped[list["Order"]] = relationship(back_populates="customer")


class Product(Base):
    __tablename__ = "products"
    id: Mapped[int] = mapped_column(primary_key=True)
    name: Mapped[str] = mapped_column(String(100))
    description: Mapped[str] = mapped_column(String(500), default="")
    price: Mapped[float] = mapped_column(Float)
    category: Mapped[str] = mapped_column(String(50))
    image: Mapped[str] = mapped_column(String(255), default="")
    is_active: Mapped[bool] = mapped_column(Boolean, default=True)
    modifiers: Mapped[list[dict] | None] = mapped_column(JSON, nullable=True, default=list)
    rating: Mapped[float | None] = mapped_column(Float, nullable=True, default=4.5)
    tag_class: Mapped[str | None] = mapped_column(String(50), nullable=True)
    tag_label: Mapped[str | None] = mapped_column(String(100), nullable=True)
    ingredients: Mapped[list[str] | None] = mapped_column(JSON, nullable=True, default=list)

    inventory: Mapped["Inventory | None"] = relationship(back_populates="product", uselist=False, cascade="all, delete-orphan")
    allergens: Mapped[list["ProductAllergen"]] = relationship(back_populates="product", cascade="all, delete-orphan")
    sizes: Mapped[list["ProductSize"]] = relationship(back_populates="product", cascade="all, delete-orphan")
    extras: Mapped[list["ProductExtra"]] = relationship(back_populates="product", cascade="all, delete-orphan")


class ProductCategory(Base):
    __tablename__ = "product_categories"
    id: Mapped[int] = mapped_column(primary_key=True)
    name: Mapped[str] = mapped_column(String(50), unique=True)
    image: Mapped[str | None] = mapped_column(String(255), nullable=True)


class ProductAllergen(Base):
    __tablename__ = "product_allergens"
    id: Mapped[int] = mapped_column(primary_key=True)
    product_id: Mapped[int] = mapped_column(ForeignKey("products.id"))
    name: Mapped[str] = mapped_column(String(100))
    severity: Mapped[str | None] = mapped_column(String(50), nullable=True)
    icon: Mapped[str | None] = mapped_column(String(50), nullable=True)
    label: Mapped[str | None] = mapped_column(String(100), nullable=True)

    product: Mapped["Product"] = relationship(back_populates="allergens")


class ProductSize(Base):
    __tablename__ = "product_sizes"
    id: Mapped[int] = mapped_column(primary_key=True)
    product_id: Mapped[int] = mapped_column(ForeignKey("products.id"))
    name: Mapped[str] = mapped_column(String(50))
    price_delta: Mapped[float] = mapped_column(Float, default=0.0)

    product: Mapped["Product"] = relationship(back_populates="sizes")


class ProductExtra(Base):
    __tablename__ = "product_extras"
    id: Mapped[int] = mapped_column(primary_key=True)
    product_id: Mapped[int] = mapped_column(ForeignKey("products.id"))
    name: Mapped[str] = mapped_column(String(100))
    price: Mapped[float] = mapped_column(Float, default=0.0)

    product: Mapped["Product"] = relationship(back_populates="extras")


class Inventory(Base):
    __tablename__ = "inventories"
    id: Mapped[int] = mapped_column(primary_key=True)
    product_id: Mapped[int] = mapped_column(ForeignKey("products.id"), unique=True)
    stock: Mapped[int] = mapped_column(Integer, default=0)
    minimum_stock: Mapped[int] = mapped_column(Integer, default=5)

    product: Mapped["Product"] = relationship(back_populates="inventory")


class Table(Base):
    __tablename__ = "tables"
    id: Mapped[int] = mapped_column(primary_key=True)
    number: Mapped[int] = mapped_column(Integer)
    capacity: Mapped[int] = mapped_column(Integer, default=4)
    is_active: Mapped[bool] = mapped_column(Boolean, default=True)




class Order(Base):
    __tablename__ = "orders"
    id: Mapped[int] = mapped_column(primary_key=True)
    customer_id: Mapped[int | None] = mapped_column(ForeignKey("users.id"), nullable=True)

    total: Mapped[float] = mapped_column(Float)
    status: Mapped[OrderStatus] = mapped_column(SQLEnum(OrderStatus), default=OrderStatus.PENDING)
    created_at: Mapped[datetime] = mapped_column(DateTime, default=datetime.utcnow)

    customer: Mapped["User | None"] = relationship(back_populates="orders")
    items: Mapped[list["OrderItem"]] = relationship(back_populates="order", cascade="all, delete-orphan")
    payment: Mapped["Payment | None"] = relationship(back_populates="order", uselist=False, cascade="all, delete-orphan")


class OrderItem(Base):
    __tablename__ = "order_items"
    id: Mapped[int] = mapped_column(primary_key=True)
    order_id: Mapped[int] = mapped_column(ForeignKey("orders.id"))
    product_id: Mapped[int] = mapped_column(ForeignKey("products.id"))
    quantity: Mapped[int] = mapped_column(Integer)
    unit_price: Mapped[float] = mapped_column(Float)
    modifiers: Mapped[list[dict] | None] = mapped_column(JSON, nullable=True, default=list)

    order: Mapped["Order"] = relationship(back_populates="items")
    product: Mapped["Product"] = relationship()


class Payment(Base):
    __tablename__ = "payments"
    id: Mapped[int] = mapped_column(primary_key=True)
    order_id: Mapped[int] = mapped_column(ForeignKey("orders.id"), unique=True)
    amount: Mapped[float] = mapped_column(Float)
    status: Mapped[PaymentStatus] = mapped_column(SQLEnum(PaymentStatus), default=PaymentStatus.PENDING)
    transbank_token: Mapped[str | None] = mapped_column(String(255), nullable=True, index=True)
    transbank_buy_order: Mapped[str | None] = mapped_column(String(50), nullable=True)
    created_at: Mapped[datetime] = mapped_column(DateTime, default=datetime.utcnow)

    order: Mapped["Order"] = relationship(back_populates="payment")


# Menu schema models (docs/menu_schema.md)
from app.models.menu import (  # noqa: F401, E402
    Category, MenuItem, MenuItemVariant, ModifierGroup, Modifier,
    Supplier, Ingredient, DietaryTag, Allergen,
    MenuItemModifierGroup, MenuItemDietaryTag, VariantModifierGroup,
    VariantIngredient, MenuItemIngredient, ModifierIngredient,
    IngredientAllergen,
)
